--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
    
 
         <!-- Wrapper start -->
-        <div class="wrap">
+        <div class="wrap" style="
+    background-color: #005846;
+">
 
             <!-- Header start -->
             <header id="HomeMain1" class="uni-header uk-position-top">
