--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             
 			<!-- <img class="uk-width-2xsmall uk-flex-center uk-margin-auto uk-margin-medium uk-margin-large@m" src="../assets/images/divider-01.svg" alt="Divider" data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 100;"> -->
             <!-- roadmap start -->
-            <div id="uni_roadmap" class="uni-roadmap uk-section uk-section-large@m uk-padding-3xlarge-bottom@m uk-panel uk-overflow-hidden swiper-parent">
+            <div id="uni_roadmap" class="uni-roadmap uk-section uk-section-large@m uk-padding-3xlarge-bottom@m uk-panel uk-overflow-hidden swiper-parent" style="background-color: #005846;">
                 <div class="uk-container">
                     <header class="uk-grid-xsmall uk-flex-center uk-flex-middle uk-text-center uk-child-width-auto@m uk-grid" data-uk-grid data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 100;">
                         <div class="uk-panel">
@@ -666,7 +666,7 @@
                                         </div>
                                         <div class="uk-panel uk-width-expand">
                                             <h3 class="uk-h5 uk-h4@m">Swap</h3>
-                                            <p>Select SOL to swap for $LTN and hit "Swap" bottom</p>
+                                            <p>Select SOL to swap for $DEM and hit "Swap" bottom</p>
                                         </div>
                                     </div>
                                 </div>
