--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         
                                         <h2 class="uk-h2 uk-heading-d3@m uk-margin-small uk-margin@m">Introducing</h2>
                                         <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted"> Demeter($DEM), the newest meme token on the Solana blockchain inspired by Demeter. <br>
-                                        known as CERES was one of the most prominent and powerful goddesses in all of ancient Greek mythology.</p>
+                                        Demeter also known as CERES was one of the most prominent and powerful goddesses in all of ancient Greek mythology.</p>
                                         <a href="#" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>BUY $DEM</span>
                                             <i class="uk-text-bold"></i>
