tokenomics SUPPLY FIX

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             </div>
                             <div>
                                 <div class="uk-panel">
-                                    <h4 class="uk-h3 uk-heading-d3@m uk-text-gradient uk-margin-xsmall uk-margin@m">100M</h4>
+                                    <h4 class="uk-h3 uk-heading-d3@m uk-text-gradient uk-margin-xsmall uk-margin@m">1B $DEM</h4>
                                     <span>Total Supply</span>
                                 </div>
                             </div>
