--- a/index.html
+++ b/index.html
@@ -451,9 +451,9 @@
                                                 
                                                 <hr class="uk-width-2xsmall uk-margin-medium@m">
                                                 <ul class="uk-list uk-text-small uk-text-medium@m">
-                                                    <li class="uk-flex-middle"> Presale</li>
-                                                    <li class="uk-flex-middle"> Live on Dexes</li>
-                                                    <li class="uk-flex-middle"> Trendings</li>
+                                                    <li class="uk-flex-middle"> Live on pumpfun</li>
+                                                    <li class="uk-flex-middle"> Hit KOTH</li>
+                                                    <li class="uk-flex-middle"> Live on Raydium</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -469,9 +469,9 @@
                                                
                                                 <hr class="uk-width-2xsmall uk-margin-medium@m">
                                                 <ul class="uk-list uk-text-small uk-text-medium@m">
-                                                    <li class="uk-flex-middle"> 1000 holders Target</li>
-                                                    <li class="uk-flex-middle"> 5000 wallet activities </li>
-                                                    <li class="uk-flex-middle"> Community Contests</li>
+                                                    <li class="uk-flex-middle"> Marketing & Trendings</li>
+                                                    <li class="uk-flex-middle"> 1000 holders </li>
+                                                    <li class="uk-flex-middle"> DEX Listings</li>
                                                     <li class="uk-flex-middle"> Charity</li>
                                                 </ul>
                                             </div>
