links complete FIX

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                                         
                                         <h2 class="uk-h2 uk-heading-d3@m uk-margin-small uk-margin@m">Introducing</h2>
                                         <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted"> Demeter($DEM), the newest meme token on the Solana blockchain inspired by Demeter. </p>
-                                        <a href="#" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
+                                        <a href="https://pump.fun/HEW1uLtYsYSX8S6wNrAYjHQSHp4JzNL958AKtrNhwhBF" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>BUY $DEM</span>
                                             <i class="uk-text-bold"></i>
                                         </a>
-										<a href="#" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
+										<a href="https://solscan.io/token/HEW1uLtYsYSX8S6wNrAYjHQSHp4JzNL958AKtrNhwhBF" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>Contract</span>
                                             <i class="uk-text-bold"></i>
                                         </a>
@@ -556,7 +556,7 @@
                         <div class="uk-panel uk-text-center">
                             <h2 class="uk-h3 uk-h1@m">How to buy DemeterToken</h2>
 							
-                            <a href="#" class="uk-button uk-button-small uk-button-large@m uk-button-gradient uk-margin-small-top uk-margin-large-top@m">$DEM Contract Address</a>
+                            <a href="https://solscan.io/token/HEW1uLtYsYSX8S6wNrAYjHQSHp4JzNL958AKtrNhwhBF" class="uk-button uk-button-small uk-button-large@m uk-button-gradient uk-margin-small-top uk-margin-large-top@m">$DEM Contract Address</a>
                         </div>
                     </header>
                     <div class="uk-panel uk-margin-medium-top uk-margin-2xlarge-top@m" data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 300;">
