links add complete FIX

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                         
                                         <h2 class="uk-h2 uk-heading-d3@m uk-margin-small uk-margin@m">Introducing</h2>
                                         <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted"> Demeter($DEM), the newest meme token on the Solana blockchain inspired by Demeter. </p>
-                                        <a href="https://pump.fun/HEW1uLtYsYSX8S6wNrAYjHQSHp4JzNL958AKtrNhwhBF" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
+                                        <a href="https://raydium.io/swap/?inputMint=sol&outputMint=HEW1uLtYsYSX8S6wNrAYjHQSHp4JzNL958AKtrNhwhBF" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>BUY $DEM</span>
                                             <i class="uk-text-bold"></i>
                                         </a>
@@ -182,10 +182,10 @@
                                             <span>Contract</span>
                                             <i class="uk-text-bold"></i>
                                         </a>
-										<!-- <a href="#" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
+										<a href="https://dexscreener.com/solana/HEW1uLtYsYSX8S6wNrAYjHQSHp4JzNL958AKtrNhwhBF" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>Chart</span>
                                             <i class="uk-text-bold"></i>
-                                        </a> -->
+                                        </a>
 										<!-- <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted">9% reward this week: USDT</p> -->
 										<!-- <a href="https://bscscan.com/address/0x55d398326f99059ff775485246999027b3197955#code" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>USDT Contract</span>
