white paper  link add

--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
                                             <span>Chart</span>
                                             <i class="uk-text-bold"></i>
                                         </a>
+                                        <a href="https://demeterwhitepaper.gitbook.io/demeter" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
+                                            <span>Whitepaper</span>
+                                            <i class="uk-text-bold"></i>
+                                        </a>
 										<!-- <p class="uk-text-xlarge uk-width-xlarge@m uk-text-muted">9% reward this week: USDT</p> -->
 										<!-- <a href="https://bscscan.com/address/0x55d398326f99059ff775485246999027b3197955#code" class="uk-button uk-button-medium@m uk-button-gradient uk-margin-small-top">
                                             <span>USDT Contract</span>
